; ModuleID = '/home/carl/AnghaBench/linux/drivers/vhost/extr_net.c_vhost_net_buf_peek_len.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/vhost/extr_net.c_vhost_net_buf_peek_len.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.xdp_frame = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*)* @vhost_net_buf_peek_len to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @vhost_net_buf_peek_len(i8* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i8*, align 8
  %4 = alloca %struct.xdp_frame*, align 8
  store i8* %0, i8** %3, align 8
  %5 = load i8*, i8** %3, align 8
  %6 = call i64 @tun_is_xdp_frame(i8* %5)
  %7 = icmp ne i64 %6, 0
  br i1 %7, label %8, label %14

8:                                                ; preds = %1
  %9 = load i8*, i8** %3, align 8
  %10 = call %struct.xdp_frame* @tun_ptr_to_xdp(i8* %9)
  store %struct.xdp_frame* %10, %struct.xdp_frame** %4, align 8
  %11 = load %struct.xdp_frame*, %struct.xdp_frame** %4, align 8
  %12 = getelementptr inbounds %struct.xdp_frame, %struct.xdp_frame* %11, i32 0, i32 0
  %13 = load i32, i32* %12, align 4
  store i32 %13, i32* %2, align 4
  br label %17

14:                                               ; preds = %1
  %15 = load i8*, i8** %3, align 8
  %16 = call i32 @__skb_array_len_with_tag(i8* %15)
  store i32 %16, i32* %2, align 4
  br label %17

17:                                               ; preds = %14, %8
  %18 = load i32, i32* %2, align 4
  ret i32 %18
}

declare dso_local i64 @tun_is_xdp_frame(i8*) #1

declare dso_local %struct.xdp_frame* @tun_ptr_to_xdp(i8*) #1

declare dso_local i32 @__skb_array_len_with_tag(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
